# DtCraft

./: AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.sh  README.md  a.csv  aclocal.m4  config.lt  config.status  configure  configure.ac  libtool  model.data
app/debs18/: .debs18.cpp.swp  dataframe.cpp  debs18.cpp  debs18.hpp  dnn.cpp  dtr.cpp  feeder.hpp  map.cpp  rnn.cpp  utility.cpp
app/debs18/.deps/: debs18.Po  dnn.Po  dtr.Po  map.Po  utility.Po
app/demo/: demo.cpp
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
benchmark/debs18/: ports.csv
conf/: agents  conf.sh  master
docs/: about.html  about.php  download.html  examples.html  index.html  quickstart.html
docs/community/: faq.html  get_in_touch.html  news.html
docs/cookbook/: event_driven_programming.html  io_stream.html  stream_graph.html  write_the_first_dtcraft_program.html
docs/css/: custom.css  dtcraft.css
docs/images/: logo.eps  logo.pptx  logo.ps  overview.pptx  stream_graph.pptx  unified_framework.eps  unified_framework.pptx  unified_framework.ps
docs/js/: bootstrap-hover-dropdown.min.js  dtcraft-captcha.js  dtcraft-footer.js  dtcraft-navbar.js
docs/ml/: dnn.html
example/: .external.cpp.swp  external.cpp  feeder.cpp  hello_world.cpp  kmeans.cpp  mnist.cpp  operator.cpp  pi.cpp  prime.cpp  prober.cpp  reduce_sum.cpp
example/.deps/: external.Po  feeder.Po  hello_world.Po  kmeans.Po  mnist.Po  operator.Po  pi.Po  prime.Po  prober.Po  reduce_sum.Po
include/dtc/: config.hpp  config.hpp.in  device.hpp  dtc.hpp  error.hpp  exit.hpp  headerdef.hpp  macrodef.hpp  policy.hpp  stamp-h1  traits.hpp  utility.hpp
include/dtc/archive/: archive.hpp  binary.hpp
include/dtc/cell/: cell.hpp  operator.hpp  visitor.hpp
include/dtc/cell/feeder/: csv.hpp  debs.hpp  feeder.hpp  file.hpp  mnist.hpp  socket.hpp
include/dtc/cell/ml/: dnn.hpp
include/dtc/concurrent/: concurrent.hpp  deque.hpp  fifo.hpp  mutex.hpp  queue.hpp  shared_guard.hpp  synchronized.hpp  threadpool.hpp  unique_guard.hpp
include/dtc/contrib/debs18/: dataframe.hpp  debs18.hpp  feeder.hpp  query1.hpp  query2.hpp
include/dtc/csv/: csv.hpp
include/dtc/event/: demux.hpp  epoll.hpp  event.hpp  reactor.hpp  select.hpp
include/dtc/ipc/: block_file.hpp  device.hpp  domain.hpp  fifo.hpp  ios.hpp  ipc.hpp  notifier.hpp  pipe.hpp  shm.hpp  socket.hpp  streambuf.hpp
include/dtc/json/: json.hpp
include/dtc/kernel/: agent.hpp  cgroup.hpp  container.hpp  executor.hpp  graph.hpp  manager.hpp  master.hpp  scheduler.hpp  stream.hpp  vertex.hpp
include/dtc/lxc/: cgroup.hpp  container.hpp
include/dtc/ml/: activation.hpp  dnn.hpp  layer.hpp  linear.hpp  loss.hpp  ml.hpp  mnist.hpp  naive_bayes.hpp  optimizer.hpp  rnn.hpp
include/dtc/protobuf/: brokenio.hpp  common.hpp  frontier.hpp  killtask.hpp  loadinfo.hpp  protobuf.hpp  resource.hpp  solution.hpp  taskinfo.hpp  topology.hpp
include/dtc/statgrab/: statgrab.hpp
include/dtc/static/: logger.hpp
include/dtc/utility/: algorithm.hpp  allocator.hpp  chrono.hpp  hash.hpp  ios.hpp  json.hpp  lambda.hpp  lexical_cast.hpp  literals.hpp  logger.hpp  mempool.hpp  os.hpp  random.hpp  scope_guard.hpp  singleton.hpp  table.hpp  utility.hpp  uuid.hpp
include/dtc/webui/: webui.hpp
licenses/: ConcurrentQueue-Cameron.txt
m4/: ax_compiler_vendor.m4  ax_compiler_version.m4  ax_libstatgrab.m4
main/: agent.cpp  master.cpp
main/.deps/: agent.Po  master.Po
sbin/: common.sh  daemonize.sh  kernel.sh  notes  submit.sh
src/: device.cpp  error.cpp  exit.cpp  policy.cpp
src/.deps/: device.Plo  error.Plo  exit.Plo  policy.Plo
src/cell/feeder/: debs18.lo  mnist.cpp
src/cell/feeder/.deps/: debs18.Plo
src/contrib/debs18/: dataframe.cpp  feeder.cpp  query2.cpp
src/csv/: csv.cpp
src/csv/.deps/: csv.Plo
src/event/: epoll.cpp  event.cpp  reactor.cpp  select.cpp
src/event/.deps/: epoll.Plo  event.Plo  reactor.Plo  select.Plo
src/ipc/: block_file.cpp  device.cpp  domain.cpp  fifo.cpp  ipc.cpp  notifier.cpp  pipe.cpp  shm.cpp  socket.cpp  streambuf.cpp
src/ipc/.deps/: block_file.Plo  domain.Plo  fifo.Plo  ipc.Plo  notifier.Plo  pipe.Plo  shm.Plo  socket.Plo  streambuf.Plo
src/kernel/: agent.cpp  cgroup.cpp  container.cpp  executor.cpp  graph.cpp  manager.cpp  master.cpp  scheduler.cpp  stream.cpp  vertex.cpp
src/kernel/.deps/: agent.Plo  cgroup.Plo  container.Plo  executor.Plo  graph.Plo  manager.Plo  master.Plo  scheduler.Plo  stream.Plo  vertex.Plo
src/lxc/: cgroup.cpp  container.cpp
src/ml/: dnn.cpp  layer.cpp  linear.cpp  loss.cpp  naive_bayes.cpp  optimizer.cpp  rnn.cpp
src/ml/.deps/: dnn.Plo  linear.Plo  loss.Plo  naive_bayes.Plo  optimizer.Plo
src/protobuf/: common.cpp  frontier.cpp  loadinfo.cpp  protobuf.cpp  resource.cpp  solution.cpp  taskinfo.cpp  topology.cpp
src/protobuf/.deps/: common.Plo  frontier.Plo  loadinfo.Plo  protobuf.Plo  resource.Plo  solution.Plo  taskinfo.Plo  topology.Plo
src/statgrab/: statgrab.cpp
src/statgrab/.deps/: statgrab.Plo
src/utility/: http_parser.cpp  os.cpp  table.cpp
src/utility/.deps/: cgroup.Plo  http_parser.Plo  os.Plo  table.Plo
src/webui/: webui.cpp
src/webui/.deps/: webui.Plo
unittest/: archive.cpp  archive.sh  concurrent.cpp  concurrent.sh  ipc.cpp  ipc.sh  ml.cpp  ml.sh  reactor.cpp  reactor.sh  scheduler.cpp  scheduler.sh  statgrab.cpp  statgrab.sh  traits.cpp  traits.sh  utility.cpp  utility.sh  webui.cpp  webui.sh
unittest/.deps/: archive.Po  concurrent.Po  ipc.Po  ml.Po  reactor.Po  scheduler.Po  statgrab.Po  traits.Po  utility.Po  webui.Po
webui/: cluster.html  index.html  logo.odg
webui/css/: .dtcraft.css.swp  dtcraft.css  dtcraft.min.css
webui/js/: controller.js
